--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,4 +15,12 @@ path = "src/main.rs"
 name = "chainthru"
 
 [dependencies]
-sqlx = "0.7.0"
+clap = { version = "4.3.12", features = ["derive", "env"] }
+config = "0.13.3"
+ethereum-types = "0.14.1"
+serde = { version = "1.0.171", features = ["derive"] }
+serde-aux = "4.2.0"
+serde_derive = "1.0.171"
+sqlx = { version = "0.7.0", features = ["postgres", "runtime-tokio"] }
+tokio = { version = "1.29.1", features = ["macros", "full"] }
+web3 = "0.19.0"
