feat: chainthru-index insert blocks

--- a/chainthru-index/Cargo.toml
+++ b/chainthru-index/Cargo.toml
@@ -11,6 +11,7 @@ rust-version.workspace = true
 
 [dependencies]
 ethereum-types.workspace = true
+web3.workspace = true
 serde-aux.workspace = true
 serde_derive.workspace = true
 
