--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ chainthru-index = { path = "./chainthru-index" }
 chainthru-server = { path = "./chainthru-server" }
 
 ethereum-types = "0.14.1"
+web3 = "0.19.0"
 serde = "1.0.171"
 serde-aux = "4.2.0"
 serde_derive = "1.0.171"
