feat(chainthru): run the server + index in parallel

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,3 +29,6 @@ serde_derive = "1.0.171"
 sqlx = "0.7.0"
 tokio = "1.29.1"
 thiserror = "1.0.44"
+futures = "0.3.28"
+log = "0.4.19"
+num_cpus = "1.16.0"
