--- a/chainthru/Cargo.toml
+++ b/chainthru/Cargo.toml
@@ -19,9 +19,13 @@ chainthru-index.workspace = true
 
 ethereum-types.workspace = true
 web3.workspace = true
+futures.workspace = true
+log.workspace = true
+num_cpus.workspace = true
 
 sqlx = { workspace = true, features = ["postgres", "runtime-tokio"] }
 
 clap = { version = "4.3.12", features = ["derive", "env"] }
 config = "0.13.3"
 tokio = { version = "1.29.1", features = ["macros", "full"] }
+env_logger = "0.10.0"
