--- a/.env-example
+++ b/.env-example
@@ -1,5 +1,9 @@
+DATABASE_URL="postgres://postgres:password@localhost:5432/chainthru"
+
 CHAINTHRU_NODE_URL="https://eth.llamarpc.com"
 CHAINTHRU_DATABASE_URL="postgres://postgres:password@localhost:5432/chainthru"
 CHAINTHRU_FROM_BLOCK=12356007
 CHAINTHRU_TO_BLOCK=12356112
-DATABASE_URL="postgres://postgres:password@localhost:5432/chainthru"
+
+CHAINTHRU_SERVER_HOST="0.0.0.0"
+CHAINTHRU_SERVER_PORT=8080
