--- a/chainthru-index/Cargo.toml
+++ b/chainthru-index/Cargo.toml
@@ -15,6 +15,8 @@ web3.workspace = true
 serde-aux.workspace = true
 serde_derive.workspace = true
 thiserror.workspace = true
+futures.workspace = true
+log.workspace = true
 
 serde = { workspace = true, features = ["derive"]}
 sqlx = { workspace = true, features = ["postgres", "runtime-tokio"] }
