--- a/chainthru-server/Cargo.toml
+++ b/chainthru-server/Cargo.toml
@@ -1,7 +1,6 @@
 [package]
 name = "chainthru-server"
 authors = [ "Lachezar Kolev <lachezarkolevgg@gmail.com>" ]
-description = "API server for chainthru"
 
 version.workspace = true
 edition.workspace = true
@@ -12,8 +11,12 @@ rust-version.workspace = true
 [dependencies]
 serde-aux.workspace = true
 serde_derive.workspace = true
+thiserror.workspace = true
+futures.workspace = true
+num_cpus.workspace = true
 
 serde = { workspace = true, features = ["derive"]}
 sqlx = { workspace = true, features = ["postgres", "runtime-tokio"] }
 tokio = { workspace = true, features = ["full"] }
 actix-web = "4.3.1"
+serde_json = "1.0.103"
