--- a/chainthru/Cargo.toml
+++ b/chainthru/Cargo.toml
@@ -22,6 +22,7 @@ web3.workspace = true
 futures.workspace = true
 log.workspace = true
 num_cpus.workspace = true
+url.workspace = true
 
 sqlx = { workspace = true, features = ["postgres", "runtime-tokio"] }
 
