--- a/chainthru-index/Cargo.toml
+++ b/chainthru-index/Cargo.toml
@@ -10,6 +10,8 @@ repository.workspace = true
 rust-version.workspace = true
 
 [dependencies]
+chainthru-types.workspace = true
+
 ethereum-types.workspace = true
 web3.workspace = true
 serde-aux.workspace = true
@@ -18,9 +20,9 @@ thiserror.workspace = true
 futures.workspace = true
 log.workspace = true
 url.workspace = true
+derive_builder.workspace = true
 
 serde = { workspace = true, features = ["derive"]}
 sqlx = { workspace = true, features = ["postgres", "runtime-tokio"] }
 tokio = { workspace = true, features = ["full"] }
-derive_builder = "0.12.0"
 async-trait = "0.1.72"
