--- a/chainthru-types/Cargo.toml
+++ b/chainthru-types/Cargo.toml
@@ -18,3 +18,6 @@ ethereum-types.workspace = true
 derive_builder.workspace = true
 web3.workspace = true
 sqlx.workspace = true
+url.workspace = true
+serde.workspace = true
+serde-aux.workspace = true
