--- a/chainthru-types/Cargo.toml
+++ b/chainthru-types/Cargo.toml
@@ -21,3 +21,6 @@ sqlx.workspace = true
 url.workspace = true
 serde.workspace = true
 serde-aux.workspace = true
+thiserror.workspace = true
+async-trait = "0.1.72"
+
