--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,3 +36,5 @@ log = "0.4.19"
 num_cpus = "1.16.0"
 url = "2.4.0"
 derive_builder = "0.12.0"
+secrecy = { version = "0.8.0", features = ["serde"] }
+uuid = { version = "1.4.0", features = ["v4"] }
