--- a/chainthru-server/Cargo.toml
+++ b/chainthru-server/Cargo.toml
@@ -17,9 +17,12 @@ thiserror.workspace = true
 futures.workspace = true
 num_cpus.workspace = true
 web3.workspace = true
+secrecy.workspace = true
+uuid.workspace = true
 
 serde = { workspace = true, features = ["derive"]}
 sqlx = { workspace = true, features = ["postgres", "runtime-tokio"] }
 tokio = { workspace = true, features = ["full"] }
 actix-web = "4.3.1"
 serde_json = "1.0.103"
+reqwest = "0.11.18"
