--- a/chainthru/Cargo.toml
+++ b/chainthru/Cargo.toml
@@ -24,6 +24,7 @@ futures.workspace = true
 log.workspace = true
 num_cpus.workspace = true
 url.workspace = true
+secrecy.workspace = true
 sqlx = { workspace = true, features = ["postgres", "runtime-tokio"] }
 
 clap = { version = "4.3.12", features = ["derive", "env"] }
