test(chainthru-types): units

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ web3 = "0.19.0"
 serde = "1.0.171"
 serde-aux = "4.2.0"
 serde_derive = "1.0.171"
+serde_json = "1.0.104"
 sqlx = "0.7.0"
 tokio = "1.29.1"
 thiserror = "1.0.44"
