--- a/chainthru-types/Cargo.toml
+++ b/chainthru-types/Cargo.toml
@@ -21,6 +21,7 @@ sqlx.workspace = true
 url.workspace = true
 serde.workspace = true
 serde-aux.workspace = true
+serde_json.workspace = true
 thiserror.workspace = true
 secrecy.workspace = true
 
