--- a/chainthru-tracing/Cargo.toml
+++ b/chainthru-tracing/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "chainthru-types"
+name = "chainthru-tracing"
 authors.workspace = true
 description.workspace = true
 documentation.workspace = true
@@ -14,16 +14,3 @@ repository.workspace = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ethereum-types.workspace = true
-derive_builder.workspace = true
-web3.workspace = true
-sqlx.workspace = true
-url.workspace = true
-serde.workspace = true
-serde-aux.workspace = true
-serde_json.workspace = true
-thiserror.workspace = true
-secrecy.workspace = true
-
-async-trait = "0.1.72"
-convert_case = "0.6.0"
