--- a/.env-example
+++ b/.env-example
@@ -1,4 +1,6 @@
+# used for local dev
 DATABASE_URL="postgres://postgres:password@localhost:5432/chainthru"
+SKIP_DOCKER=true
 
 CHAINTHRU_NODE_URL="https://eth.llamarpc.com"
 CHAINTHRU_DATABASE_URL="postgres://postgres:password@localhost:5432/chainthru"
