--- a/chainthru-server/Cargo.toml
+++ b/chainthru-server/Cargo.toml
@@ -26,3 +26,4 @@ tokio = { workspace = true, features = ["full"] }
 actix-web = "4.3.1"
 serde_json = "1.0.103"
 reqwest = "0.11.18"
+log = "0.4.19"
