feat(chainthru-tracing): initial

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ members = [
     "chainthru-primitives",
     "chainthru-index",
     "chainthru-server",
+    "chainthru-tracing",
 ]
 
 [workspace.dependencies]
