--- a/charts/chainthru-server/values.yaml
+++ b/charts/chainthru-server/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  name: "lbkolev/chainthru"
+  name: "ghcr.io/lbkolev/chainthru"
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   # @default - AppVersion
