--- a/chainthru-tracing/Cargo.toml
+++ b/chainthru-tracing/Cargo.toml
@@ -14,3 +14,7 @@ repository.workspace = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+tracing = "0.1.37"
+tracing-bunyan-formatter = "0.3.9"
+tracing-log = "0.1.3"
+tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
