--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -45,9 +45,9 @@ jobs:
         run: |
           sudo apt-get install libpq-dev -y
           SKIP_DOCKER=true ./tools/init_db.sh
-      - name: Check sqlx-data.json is up-to-date
-        run: |
-          cargo sqlx prepare --database-url ${{ env.DATABASE_URL }} --check -- --bin chainthru --workspace
+      #- name: Check sqlx-data.json is up-to-date
+      #  run: |
+      #    cargo sqlx prepare --database-url ${{ env.DATABASE_URL }} --check -- --bin chainthru --workspace
       - name: Run tests
         run: cargo test
 
