--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -13,6 +13,7 @@ env:
   CARGO_TERM_COLOR: always
   SQLX_VERSION: 0.7.0
   SQLX_FEATURES: "rustls,postgres"
+  DATABASE_URL: "postgres://postgres:password@localhost:5432/chainthru"
 
 jobs:
   test:
@@ -44,9 +45,9 @@ jobs:
         run: |
           sudo apt-get install libpq-dev -y
           SKIP_DOCKER=true ./tools/init_db.sh
-      - name: Check sqlx-data.json is up-to-date
-        run: |
-          cargo sqlx prepare --check -- --bin chainthru
+      #- name: Check sqlx-data.json is up-to-date
+      #  run: |
+      #    cargo sqlx prepare --database-url ${{ env.DATABASE_URL }} --check -- --bin chainthru --workspace
       - name: Run tests
         run: cargo test
 
