--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ members = [
 chainthru-primitives = { path = "./chainthru-primitives" }
 chainthru-index = { path = "./chainthru-index" }
 chainthru-server = { path = "./chainthru-server" }
+chainthru-tracing = { path = "./chainthru-tracing" }
 
 ethereum-types = "0.14.1"
 web3 = "0.19.0"
