--- a/.env-example
+++ b/.env-example
@@ -3,7 +3,7 @@ DATABASE_URL="postgres://postgres:password@localhost:5432/chainthru"
 SKIP_DOCKER=true
 
 CHAINTHRU_NODE_URL="https://eth.llamarpc.com"
-CHAINTHRU_DATABASE_URL="postgres://postgres:password@localhost:5432/chainthru"
+CHAINTHRU_STORAGE_URL="postgres://postgres:password@localhost:5432/chainthru"
 CHAINTHRU_SRC_BLOCK=12357607
 CHAINTHRU_DST_BLOCK=12359612
 
