--- a/chainthru/Cargo.toml
+++ b/chainthru/Cargo.toml
@@ -17,7 +17,6 @@ name = "chainthru"
 chainthru-index.workspace = true
 chainthru-server.workspace = true
 chainthru-primitives.workspace = true
-chainthru-tracing.workspace = true
 
 web3.workspace = true
 futures.workspace = true
@@ -26,6 +25,13 @@ num_cpus.workspace = true
 url.workspace = true
 secrecy.workspace = true
 sqlx = { workspace = true, features = ["postgres", "runtime-tokio"] }
-
 clap = { version = "4.3.12", features = ["derive", "env"] }
 tokio = { version = "1.29.1", features = ["macros", "full"] }
+tracing = "0.1.37"
+tracing-bunyan-formatter = "0.3.9"
+tracing-log = "0.1.3"
+tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
+
+[dev-dependencies]
+temp-env = "0.3.6"
+serial_test = "2.0.0"
