style: unify packages dep

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,7 @@ jobs:
         toolchain:
           - stable
           - beta
-          - nightly§
+          - nightly
     services:
       postgres:
         image: postgres:14
