--- a/chainthru-index/Cargo.toml
+++ b/chainthru-index/Cargo.toml
@@ -1,13 +1,15 @@
 [package]
 name = "chainthru-index"
-authors = [ "Lachezar Kolev <lachezarkolevgg@gmail.com>" ]
-description = "Ethereum block/transaction indexer"
 
-version.workspace = true
+authors.workspace = true
+description.workspace = true
 edition.workspace = true
+homepage.workspace = true
 license.workspace = true
-repository.workspace = true
+version.workspace = true
 rust-version.workspace = true
+readme.workspace = true
+repository.workspace = true
 
 [features]
 parallelism = ["dep:rayon"]
