--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace.package]
 authors = ["Lachezar Kolev <lachezarkolevgg@gmail.com>"]
-description = "EVM ETL indexer"
+description = "EVM Indexer"
 documentation = "https://docs.rs/chainthru"
 edition = "2021"
 homepage = "https://github.com/lbkolev/chainthru"
@@ -30,8 +30,8 @@ serde = "1.0.171"
 serde-aux = "4.2.0"
 serde_derive = "1.0.171"
 serde_json = "1.0.104"
-sqlx = "0.7.2"
-tokio = "1.29.1"
+sqlx = { git = "https://github.com/launchbadge/sqlx", branch = "main", features = ["postgres", "runtime-tokio"] }
+tokio = { version = "1.29.1", features = ["macros", "full"] }
 thiserror = "1.0.44"
 futures = "0.3.28"
 log = "0.4.19"
@@ -40,3 +40,5 @@ url = "2.4.0"
 derive_builder = "0.12.0"
 secrecy = { version = "0.8.0", features = ["serde"] }
 uuid = { version = "1.4.0", features = ["v4"] }
+async-trait = "0.1.72"
+alloy-primitives = "0.4.2"
