--- a/chainthru-server/Cargo.toml
+++ b/chainthru-server/Cargo.toml
@@ -22,11 +22,11 @@ num_cpus.workspace = true
 web3.workspace = true
 secrecy.workspace = true
 uuid.workspace = true
+serde_json.workspace = true
+log.workspace = true
+sqlx.workspace = true
 
 serde = { workspace = true, features = ["derive"]}
-sqlx = { workspace = true, features = ["postgres", "runtime-tokio"] }
 tokio = { workspace = true, features = ["full"] }
 actix-web = "4.3.1"
-serde_json = "1.0.103"
 reqwest = "0.11.18"
-log = "0.4.19"
