--- a/chainthru/Cargo.toml
+++ b/chainthru/Cargo.toml
@@ -26,9 +26,11 @@ log.workspace = true
 num_cpus.workspace = true
 url.workspace = true
 secrecy.workspace = true
-sqlx = { workspace = true, features = ["postgres", "runtime-tokio"] }
+sqlx.workspace = true
+tokio.workspace = true
+alloy-primitives.workspace = true
+thiserror.workspace = true
 clap = { version = "4.3.12", features = ["derive", "env"] }
-tokio = { version = "1.29.1", features = ["macros", "full"] }
 tracing = "0.1.37"
 tracing-bunyan-formatter = "0.3.9"
 tracing-log = "0.1.3"
