--- a/chainthru-index/Cargo.toml
+++ b/chainthru-index/Cargo.toml
@@ -29,6 +29,7 @@ async-trait.workspace = true
 sqlx.workspace = true
 tokio.workspace = true
 alloy-primitives.workspace = true
+ethers = { workspace = true, features = ["ws"] }
 
 serde = { workspace = true, features = ["derive"]}
 rayon = { version = "1.7.0", optional = true }
