--- a/chainthru/Cargo.toml
+++ b/chainthru/Cargo.toml
@@ -35,6 +35,7 @@ tracing = "0.1.37"
 tracing-bunyan-formatter = "0.3.9"
 tracing-log = "0.1.3"
 tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
+ethers-providers = "2.0.11"
 
 [dev-dependencies]
 temp-env = "0.3.6"
