--- a/chainthru/Cargo.toml
+++ b/chainthru/Cargo.toml
@@ -20,7 +20,6 @@ chainthru-index.workspace = true
 chainthru-server.workspace = true
 chainthru-primitives.workspace = true
 
-web3.workspace = true
 futures.workspace = true
 log.workspace = true
 num_cpus.workspace = true
@@ -35,6 +34,8 @@ tracing = "0.1.37"
 tracing-bunyan-formatter = "0.3.9"
 tracing-log = "0.1.3"
 tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
+ethers-providers.workspace = true
+ethers-core.workspace = true
 
 [dev-dependencies]
 temp-env = "0.3.6"
