--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ serde = "1.0.171"
 serde-aux = "4.2.0"
 serde_derive = "1.0.171"
 serde_json = "1.0.104"
-sqlx = { git = "https://github.com/launchbadge/sqlx", branch = "main", features = ["postgres", "runtime-tokio"] }
+sqlx = {version = "0.7.3", features = ["postgres", "runtime-tokio"]}
 tokio = { version = "1.29.1", features = ["macros", "full"] }
 thiserror = "1.0.44"
 futures = "0.3.28"
