--- a/chart/templates/serviceaccount.yaml
+++ b/chart/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "chainthru-index.serviceAccountName" . }}
+  name: {{ include "chainthru.serviceAccountName" . }}
   labels:
-    {{- include "chainthru-index.labels" . | nindent 4 }}
+    {{- include "chainthru.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
