--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,3 +42,4 @@ async-trait = "0.1.72"
 alloy-primitives = "0.4.2"
 ethers-core = "2.0.11"
 ethers-providers = { version = "2.0.11", features = ["ipc", "ws"] }
+clap = "4.3.12"
