--- a/crates/chainthru/Cargo.toml
+++ b/crates/chainthru/Cargo.toml
@@ -31,8 +31,9 @@ alloy-primitives.workspace = true
 thiserror.workspace = true
 ethers-providers.workspace = true
 ethers-core.workspace = true
+serde_json.workspace = true
 
-clap = { version = "4.3.12", features = ["derive", "env"] }
+clap = { workspace = true, features = ["derive", "env"] }
 tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
 tracing = "0.1.37"
 tracing-bunyan-formatter = "0.3.9"
