--- a/crates/chainthru-primitives/Cargo.toml
+++ b/crates/chainthru-primitives/Cargo.toml
@@ -13,6 +13,7 @@ repository.workspace = true
 
 [dependencies]
 derive_builder.workspace = true
+tokio.workspace = true
 sqlx.workspace = true
 url.workspace = true
 serde.workspace = true
@@ -26,3 +27,7 @@ alloy-primitives.workspace = true
 ethers-providers.workspace = true
 ethers-core.workspace = true
 clap.workspace = true
+
+[dev-dependencies]
+dotenv = "0.15.0"
+uuid.workspace = true
