--- a/crates/chainthru-server/Cargo.toml
+++ b/crates/chainthru-server/Cargo.toml
@@ -12,20 +12,31 @@ readme.workspace = true
 repository.workspace = true
 
 [dependencies]
+# internal
 chainthru-primitives.workspace = true
 
+# core
+actix-web = "4.3.1"
+sqlx.workspace = true
+
+utoipa.workspace = true
+utoipa-swagger-ui = { version = "5.0.0", features = ["actix-web"] }
+utoipa-rapidoc = { version = "2.0.0", features = ["actix-web"] }
+utoipa-redoc = { version = "2.0.0", features = ["actix-web"] }
+
+serde = { workspace = true, features = ["derive"]}
 serde-aux.workspace = true
+serde_json.workspace = true
 serde_derive.workspace = true
-thiserror.workspace = true
+
+# async
+tokio.workspace = true
 futures.workspace = true
+
+# auxiliary
+thiserror.workspace = true
 num_cpus.workspace = true
 secrecy.workspace = true
 uuid.workspace = true
-serde_json.workspace = true
 log.workspace = true
-sqlx.workspace = true
-serde = { workspace = true, features = ["derive"]}
-tokio = { workspace = true, features = ["full"] }
-
-actix-web = "4.3.1"
 reqwest = "0.11.18"
