--- a/crates/chainthru-index/Cargo.toml
+++ b/crates/chainthru-index/Cargo.toml
@@ -15,21 +15,27 @@ repository.workspace = true
 parallelism = ["dep:rayon"]
 
 [dependencies]
+# internal
 chainthru-primitives.workspace = true
 
+# async
+async-trait.workspace = true
+futures.workspace = true
+tokio.workspace = true
+
+# core
 serde-aux.workspace = true
 serde_derive.workspace = true
-thiserror.workspace = true
-futures.workspace = true
-log.workspace = true
-url.workspace = true
-derive_builder.workspace = true
-async-trait.workspace = true
+serde.workspace = true
 sqlx.workspace = true
-tokio.workspace = true
+
+# eth
 alloy-primitives.workspace = true
 ethers-providers.workspace = true
 ethers-core.workspace = true
 
-serde = { workspace = true, features = ["derive"]}
+# auxiliary
+log.workspace = true
+thiserror.workspace = true
+url.workspace = true
 rayon = { version = "1.7.0", optional = true }
