--- a/crates/chainthru-primitives/Cargo.toml
+++ b/crates/chainthru-primitives/Cargo.toml
@@ -12,21 +12,27 @@ readme.workspace = true
 repository.workspace = true
 
 [dependencies]
-derive_builder.workspace = true
+# async
+async-trait.workspace = true
 tokio.workspace = true
-sqlx.workspace = true
-url.workspace = true
+
+# core
 serde.workspace = true
 serde-aux.workspace = true
 serde_json.workspace = true
-thiserror.workspace = true
-secrecy.workspace = true
-log.workspace = true
-async-trait.workspace = true
+
+# eth
 alloy-primitives.workspace = true
-ethers-providers.workspace = true
 ethers-core.workspace = true
+
+# auxiliary
 clap.workspace = true
+log.workspace = true
+secrecy.workspace = true
+sqlx.workspace = true
+thiserror.workspace = true
+url.workspace = true
+utoipa.workspace = true
 
 [dev-dependencies]
 dotenv = "0.15.0"
