--- a/crates/chainthru/Cargo.toml
+++ b/crates/chainthru/Cargo.toml
@@ -16,28 +16,36 @@ path = "src/main.rs"
 name = "chainthru"
 
 [dependencies]
+# internal
 chainthru-index.workspace = true
 chainthru-server.workspace = true
 chainthru-primitives.workspace = true
 
+# async
 futures.workspace = true
-log.workspace = true
-num_cpus.workspace = true
-url.workspace = true
-secrecy.workspace = true
-sqlx.workspace = true
 tokio.workspace = true
+
+# core
+clap = { workspace = true, features = ["derive", "env"] }
+sqlx.workspace = true
+
+# eth
 alloy-primitives.workspace = true
-thiserror.workspace = true
 ethers-providers.workspace = true
 ethers-core.workspace = true
-serde_json.workspace = true
 
-clap = { workspace = true, features = ["derive", "env"] }
+# logging/tracing
+log.workspace = true
 tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
 tracing = "0.1.37"
 tracing-bunyan-formatter = "0.3.9"
 tracing-log = "0.1.3"
+
+# auxiliary
+num_cpus.workspace = true
+url.workspace = true
+secrecy.workspace = true
+thiserror.workspace = true
 
 [dev-dependencies]
 temp-env = "0.3.6"
