--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [workspace.package]
-authors = ["Lachezar Kolev <lachezarkolevgg@gmail.com>"]
+authors = ["Chainthru contributors"]
 description = "Ethereum Indexer"
 documentation = "https://docs.rs/chainthru"
 edition = "2021"
 homepage = "https://github.com/lbkolev/chainthru"
-license = "MIT"
+license = "MIT OR Apache-2.0"
 version = "0.0.1"
 rust-version = "1.73.0"
 readme = "README.md"
@@ -13,11 +13,11 @@ repository = "https://github.com/lbkolev/chainthru"
 [workspace]
 members = [
     "crates/chainthru",
-    "crates/chainthru-client"
-,
+    "crates/chainthru-client",
     "crates/chainthru-index",
     "crates/chainthru-primitives",
-    "crates/chainthru-server"]
+    "crates/chainthru-server"
+]
 resolver = "2"
 
 [workspace.dependencies]
