--- a/crates/chainthru-server/Cargo.toml
+++ b/crates/chainthru-server/Cargo.toml
@@ -40,3 +40,6 @@ secrecy.workspace = true
 uuid.workspace = true
 log.workspace = true
 reqwest = "0.11.18"
+
+[dev-dependencies]
+mockito = "1.2.0"
