--- a/crates/chainthru-client/Cargo.toml
+++ b/crates/chainthru-client/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "chainthru-client"
-version = "0.0.0-reserved"
+version = "0.0.1"
 authors = ["lachezarkolevgg@gmail.com"]
 description = "Ethereum Indexer"
 license = "MIT"
