feat: use different threads for blocks<tx> and logs

--- a/crates/chainthru-index/Cargo.toml
+++ b/crates/chainthru-index/Cargo.toml
@@ -12,7 +12,9 @@ readme.workspace = true
 repository.workspace = true
 
 [features]
-parallelism = ["dep:rayon"]
+default = ["multi-thread"]
+multi-thread = []
+#parallelism = ["dep:rayon"]
 
 [dependencies]
 # internal
