--- a/crates/chainthru-middleware/Cargo.toml
+++ b/crates/chainthru-middleware/Cargo.toml
@@ -15,3 +15,4 @@ repository.workspace = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+tokio.workspace = true
