feat: use different threads for blocks<tx> and logs

--- a/crates/chainthru-primitives/Cargo.toml
+++ b/crates/chainthru-primitives/Cargo.toml
@@ -3,6 +3,7 @@ name = "chainthru-primitives"
 
 authors.workspace = true
 description.workspace = true
+documentation.workspace = true
 edition.workspace = true
 homepage.workspace = true
 license.workspace = true
