--- a/crates/chainthru-index/Cargo.toml
+++ b/crates/chainthru-index/Cargo.toml
@@ -3,6 +3,7 @@ name = "chainthru-index"
 
 authors.workspace = true
 description.workspace = true
+documentation.workspace = true
 edition.workspace = true
 homepage.workspace = true
 license.workspace = true
@@ -41,3 +42,4 @@ log.workspace = true
 thiserror.workspace = true
 url.workspace = true
 rayon = { version = "1.7.0", optional = true }
+paste = "1.0.14"
