feat: use different threads for polling blocks<tx> and logs (#31)
* feat: use different threads for blocks<tx> and logs

--- a/crates/chainthru-index/Cargo.toml
+++ b/crates/chainthru-index/Cargo.toml
@@ -3,6 +3,7 @@ name = "chainthru-index"
 
 authors.workspace = true
 description.workspace = true
+documentation.workspace = true
 edition.workspace = true
 homepage.workspace = true
 license.workspace = true
@@ -12,7 +13,9 @@ readme.workspace = true
 repository.workspace = true
 
 [features]
-parallelism = ["dep:rayon"]
+default = ["multi-thread"]
+multi-thread = []
+#parallelism = ["dep:rayon"]
 
 [dependencies]
 # internal
@@ -39,3 +42,4 @@ log.workspace = true
 thiserror.workspace = true
 url.workspace = true
 rayon = { version = "1.7.0", optional = true }
+paste = "1.0.14"
