feat(all): allow for support of multiple l1/l2s

--- a/crates/eventify/Cargo.toml
+++ b/crates/eventify/Cargo.toml
@@ -18,7 +18,7 @@ name = "eventify"
 
 [dependencies]
 # internal
-eventify-idx.workspace = true
+eventify-idx = { workspace = true, features = ["eth", "ws", "ipc", "http"] }
 eventify-http-server.workspace = true
 eventify-primitives.workspace = true
 
