--- a/crates/eventify-http-server/Cargo.toml
+++ b/crates/eventify-http-server/Cargo.toml
@@ -39,7 +39,7 @@ thiserror.workspace = true
 num_cpus.workspace = true
 secrecy.workspace = true
 uuid.workspace = true
-log.workspace = true
+tracing.workspace = true
 reqwest = "0.11.18"
 
 [dev-dependencies]
