--- a/crates/eventify/Cargo.toml
+++ b/crates/eventify/Cargo.toml
@@ -35,12 +35,9 @@ alloy-primitives.workspace = true
 ethers-providers.workspace = true
 ethers-core.workspace = true
 
-# logging/tracing
-log.workspace = true
+# tracing
+tracing.workspace = true
 tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
-tracing = "0.1.37"
-tracing-bunyan-formatter = "0.3.9"
-tracing-log = "0.1.3"
 
 # auxiliary
 num_cpus.workspace = true
