--- a/crates/eventify-idx/Cargo.toml
+++ b/crates/eventify-idx/Cargo.toml
@@ -16,6 +16,7 @@ repository.workspace = true
 default = [
     "eth",
     "http",
+    "postgres",
 ]
 
 # chain
@@ -25,6 +26,9 @@ eth = []
 http = []
 ws = []
 ipc = []
+
+# database
+postgres = []
 
 [dependencies]
 # internal
