--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,17 @@ services:
     networks:
       - default
 
+  redis:
+    image: redis:6.2
+    restart: always
+    environment:
+      - ALLOW_EMPTY_PASSWORD=yes
+    ports:
+      - "6379:6379"
+    command: redis-server --save 20 1 --loglevel warning
+    volumes:
+      - redis_data:/data
+
   eventify:
     depends_on:
       - postgres
@@ -51,3 +62,4 @@ networks:
 
 volumes:
   postgres_data:
+  redis_data:
