--- a/crates/eventify-idx/Cargo.toml
+++ b/crates/eventify-idx/Cargo.toml
@@ -55,6 +55,8 @@ tracing.workspace = true
 thiserror.workspace = true
 url.workspace = true
 rayon = { version = "1.7.0", optional = true }
+jsonrpsee = { version = "0.21.0", features = ["full"]}
+serde_json.workspace = true
 
 [dev-dependencies]
 dotenv = "0.15.0"
