--- a/crates/eventify-idx/Cargo.toml
+++ b/crates/eventify-idx/Cargo.toml
@@ -46,7 +46,7 @@ serde_derive.workspace = true
 sqlx.workspace = true
 
 # eth
-alloy-primitives.workspace = true
+alloy-primitives = { workspace = true, features = ["postgres"]}
 ethers-providers.workspace = true
 ethers-core.workspace = true
 
@@ -55,6 +55,8 @@ tracing.workspace = true
 thiserror.workspace = true
 url.workspace = true
 rayon = { version = "1.7.0", optional = true }
+jsonrpsee = { version = "0.21.0", features = ["full"]}
+serde_json.workspace = true
 
 [dev-dependencies]
 dotenv = "0.15.0"
